--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     
     <div id="captcha-container">
-        <img src="Logo.jpg">
+        <h1> Robot Captcha Generator</h1>
+
+        <img src="/logo_stop_bots.jpg">
         <div class="captcha">
             <canvas id="captcha" width="200" height="40"></canvas>
             <button id="reload-captcha">Reload</button>
